Lab-13-blue-green-deployment/blue.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  namespace: prd
  labels:
    app: sample-application
    env: blue
    version: v1.0.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-application
      env: blue
  template:
    metadata:
      labels:
        app: sample-application
        env: blue
        version: v1.0.0
    spec:
      containers:
        - name: sample-app
          image: hashicorp/http-echo
          args:
            - "-listen=:8080"
            - '-text="This is v1.0.0"'
          ports:
            - containerPort: 8080
