Lab-13-blue-green-deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: prd
spec:
  type: ClusterIP
  selector:
    app: sample-application
    env: blue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
